--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Monsoon Technologies</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem quas numquam vero voluptatem ipsum eius iusto minima doloremque. Laboriosam consectetur tenetur maiores impedit aliquam est harum quidem facilis ad ut.</p>
+    <p>Welcome to the Monsoon Technologies website!</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem quas numquam vero voluptatem ipsum eius iusto minima doloremque. Laboriosam consectetur tenetur maiores impedit aliquam est harum quidem facilis ad ut.</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem quas numquam vero voluptatem ipsum eius iusto minima doloremque. Laboriosam consectetur tenetur maiores impedit aliquam est harum quidem facilis ad ut.</p>
 </body>
