--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Monsoon Technologies</h1>
-    <a href="monsoonsite/contact">Contact</a>
+    <a href="/monsoonsite/contact.html">Contact</a>
     <p>Welcome to the Monsoon Technologies website!</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem quas numquam vero voluptatem ipsum eius iusto minima doloremque. Laboriosam consectetur tenetur maiores impedit aliquam est harum quidem facilis ad ut.</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem quas numquam vero voluptatem ipsum eius iusto minima doloremque. Laboriosam consectetur tenetur maiores impedit aliquam est harum quidem facilis ad ut.</p>
